test/test_wrong_return_type_on_assign/test_wrong_return_type_on_assign.out
error: Expected int but got float
 --> test/test_wrong_return_type_on_assign/test_wrong_return_type_on_assign.mvs:5:1
  |
5 | b = a();
  | ^
  |
hint: Consider changing the variable type or declaring a new variable.
