test/test_wrong_return_type_on_assign/test_wrong_return_type_on_assign.mvs
func a() float {
	return 5.0;
}
let b: int;
b = a();
